<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRepresentatives</string>
    <string name="title_representative_detail">Representative Detail</string>
    <string name="state">State:</string>
    <string name="district">District:</string>
    <string name="phone">Phone:</string>
    <string name="office">Office:</string>
    <string name="link">Link:</string>
    <string name="zip">Zip</string>
    <string name="zip_code">Zip Code:</string>

</resources>