<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/representative_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RepresentativeDetailFragment" >

    <TextView
        android:id="@+id/representativeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/partyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/representativeNameTextView"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/stateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/partyTextView"
        android:layout_marginTop="20dp"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/stateValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/stateLabel"
        android:layout_toRightOf="@+id/stateLabel"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/districtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/stateLabel"
        android:text="@string/district"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/districtValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stateValueTextView"
        android:layout_toRightOf="@+id/districtLabel"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/districtLabel"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/phoneValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phoneLabel"
        android:layout_alignBottom="@+id/phoneLabel"
        android:layout_alignLeft="@+id/districtValueTextView"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/officeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phoneLabel"
        android:text="@string/office"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/officeValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/officeLabel"
        android:layout_alignBottom="@+id/officeLabel"
        android:layout_toRightOf="@+id/phoneLabel"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/linkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/officeLabel"
        android:text="@string/link"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/linkValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/linkLabel"
        android:layout_alignBottom="@+id/linkLabel"
        android:layout_toRightOf="@+id/linkLabel"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>
